# mgx-rs

./: Cargo.toml  README.md  convert.py  rustfmt.toml
.github/: copilot-instructions.md
src/: body_parser.rs  cursor.rs  draw_map.rs  drawmap.rs  from_file.rs  guess_winner.rs  guid.rs  lib.rs  main.rs  mapcolors.rs  parser.rs  parser_raw.rs  record.rs  render.rs  stream.rs  translations.rs
src/record/: reader.rs
src/translations/: en.rs  mod.rs
tests/: parser.rs  raw_parser.rs
tests/recs/: aoc10a_1v1_with_winner.mgx  aoc10a_2v2_youxia_hash_id.mgx  aoc10a_303_3p.mgx  aoc10a_3v3_haswinner_resign_test.mgx  aoc10a_3v3_no_winner.mgx  aoc10a_3v3_with_spectator.mgx  aoc10a_4v4_no_resigned.mgx  aoc10a_4v4_standard_1.mgx  aoc10a_4v4_standard_2.mgx  aoc10a_id_with_youxia_hash.mgx  aoc10a_not_all_resigned.mgx  aoc10a_team_with_spectators.mgx  aoc10c_1v1_with_spectator.mgx  aoc10c_with_AI.mgx  aok_4v4_fast.mgl  aok_trial.mgl  bad_sync_data_at_7272_of_body.mgz  extra_bytes_after_compressed_header.mgx  headerlen_is_missing.mgx  matchup_1v2v2.mgx  next_chapter_1.mgx  up15_with_bad_command.mgz
tests/recs/bugs/: AOC10C_1v1_ae44.mgx  A_fa80.mgx  http404_after_body.mgx  zeros_after_body.mgx
utils/: convert.py
