[package]
name = "mgx"
version = "0.1.0"
authors = ["lichifeng <lichifeng@qq.com>"]
edition = "2021"
description = "A parser for **Age of Empires II** recorded games."
readme = "README.md"
homepage = "https://aocrec.com"
repository = "https://github.com/lichifeng/mgx-rs.git"
license = "MIT"
keywords = ["age of empires", "aoc", "mgl", "mgx", "mgz", "game replay"]
categories = ["Games", "Parsing tools"]

[dependencies]
anyhow = "1.0.94"
boyer-moore-magiclen = "0.2.20"
chksum-hash-md5 = "0.0.1"
clap = { version = "4.5.23", features = ["derive"] }
encoding_rs = "0.8.35"
flate2 = "1.0"
image = "0.25.4"
imageproc = "0.25.0"
phf = { version = "0.11.2", features = ["macros"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[package.metadata.docs.rs]
rustdoc-args = ["--no-deps"]
