[package]
name = "mgx"
version = "0.1.15"
authors = ["lichifeng <lichifeng@qq.com>"]
edition = "2021"
description = "A parser for Age of Empires II recorded games."
readme = "README.md"
homepage = "https://aocrec.com"
repository = "https://github.com/lichifeng/mgx-rs.git"
documentation = "https://docs.rs/mgx"
license = "MIT"
keywords = ["age-of-empires", "aoc", "game-replay"]
categories = ["games", "parsing"]
exclude = ["tests/*", ".vscode/*", "utils/*"]

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
boyer-moore-magiclen = "0.2"
chksum-hash-md5 = "0.0.1"
clap = { version = "4.5", features = ["derive"] }
encoding_rs = "0.8.35"
flate2 = "1.1"
image = "0.25"
imageproc = "0.25.0"
phf = { version = "0.13", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"